@@ -1,5 +1,11 @@
 2011-08-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* avrdude.conf.in (ATmega8515, ATmega8535, ATmega48, ATmega88, ATmega88P,
+	ATtiny88, ATmega168, ATmega168P, ATmega328P): Bump delay value for STK500v2
+	EEPROM write operation to 5, according to the respective XML files.
+
+2011-08-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	Submitted by Darcy Houlahan:
 	bug #29694: error in avrdude.conf for attiny84 eeprom
 	* avrdude.conf.in (ATtiny84, ATtiny85): fix A7 bit in EEPROM write
